Fix Telegram Web App integration and update products

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Telegram Mini App Shop" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Telegram Shop</title>
   </head>
   <body>
